# testnet_tutorial

./: README.md  mkdocs.yml  noderonin.sh  pyproject.toml
Elixir_Finance/: readme.md
docs/inery/task-4/: readme.md
inery/task-4/: readme.md  task4.sh
shardeum/: readme.md
wormholes/: README.md
