[tool.poetry]
name = "node-ronin-testnet-tutorial"
version = "0.1.0"
description = ""
authors = ["alteregogi <alteregogi@mail.com>"]
readme = "README.md"
packages = [{include = "node_ronin_testnet_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
